debug.log
Traceback (most recent call last):
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/bin/uvicorn", line 8, in <module>
    sys.exit(main())
             ^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/click/core.py", line 1442, in __call__
    return self.main(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/click/core.py", line 1363, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/click/core.py", line 1226, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/click/core.py", line 794, in invoke
    return callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/uvicorn/main.py", line 423, in main
    run(
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/uvicorn/main.py", line 593, in run
    server.run()
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/uvicorn/server.py", line 67, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/asyncio/runners.py", line 194, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/uvicorn/server.py", line 71, in serve
    await self._serve(sockets)
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/uvicorn/server.py", line 78, in _serve
    config.load()
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/uvicorn/config.py", line 439, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/dharanidharansenthilkumar/.pyenv/versions/3.12.3/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/Users/dharanidharansenthilkumar/Projects/DESAS/app/main.py", line 5, in <module>
    from app.api.endpoints import router as api_router
  File "/Users/dharanidharansenthilkumar/Projects/DESAS/app/api/endpoints.py", line 38
    expanded_url="",
    ^^^^^^^^^^^^^^^
SyntaxError: keyword argument repeated: expanded_url
